[metadata]
name = django_bpmn
version = 0.0.1
author = Joao Paulo Lobianco
author_email = joaopaulolobianco1@gmail.com
description = Encapsulates the bpmn-js diagram modeler into a Django widget
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jplobianco/django-bpmn
project_urls =
    Bug Tracker = https://github.com/jplobianco/django-bpmn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
