[metadata]
name = django_bpmn
version = 0.0.4
author = Joao Paulo Lobianco
author_email = joaopaulolobianco1@gmail.com
description = Encapsulates the bpmn-js diagram modeler into a Django widget
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bpmn,django
url = https://github.com/jplobianco/django-bpmn
project_urls =
    Bug Tracker = https://github.com/jplobianco/django-bpmn/issues
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    django
python_requires = >=3.9

[options.packages.find]
where = src

[options.package_data]
django_bpmn = static/django_bpmn/css/*.css, static/django_bpmn/js/*.js, templates/django_bpmn/*.html